fix for jquery chosen not showing on mobile browsers

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -156,7 +156,7 @@ body {
     max-width: 100%;
 }
 .chosen-single {
-    font-size: 18px;
+    font-size: 1.3em;
     font-weight: bold;
     text-align: center;
 }
@@ -437,7 +437,6 @@ body {
     }
     #map {
         height: 320px;
-        border: 1px dashed #d3d4d8;
     }
     .stats {
         div {
